# dynamic_lca_simulation

./: .gitattributes  .gitignore  APIについて＿桑原.ipynb  README.md  pyproject.toml  動的LCA_政策制度調査報告書_第1編.md
examples/: basic_usage.py
notebooks/: dynamic_lca_visualization.ipynb  irf_crf_hti100.xlsx
project_directories/: .gitignore  README.md  TEAM.md  フランスRE2020_ダイナミックLCA調査_業務リストと見積_AI活用版 (3).xlsx
project_directories/blocks/: README.md
project_directories/blocks/01_政策及び制度調査/: README.md  REFERENCES.md  TASKS.md
project_directories/blocks/02_技術及び手法調査/: README.md  REFERENCES.md  TASKS.md
project_directories/blocks/03_情報基盤調査/: README.md  REFERENCES.md  TASKS.md
project_directories/blocks/04_関係機関・専門家調査/: INTERVIEW_PLAN.md  README.md  TASKS.md
project_directories/deliverables/: .~lock.SuMPO_動的LCA調査_ブロック1統合報告書_v2.0_20260612.pdf#  RE2020認定ソフト_環境パート_日本語.docx  README.md  SuMPO_動的LCA調査_ブロック1統合報告書_v2.0_20260612.docx  SuMPO_動的LCA調査_ブロック1統合報告書_v2.0_20260612.md  SuMPO_動的LCA調査_統合報告書.pptx  SuMPO動的LCA調査報告_20260610.docx  SuMPO動的LCA調査報告書.docx  build_combined_ppt.py  lu436o75c.tmp  ~$MPO_動的LCA調査_ブロック1統合報告書_v2.0_20260612.docx  動的LCA_プレゼン.pptx  動的LCA_プレゼン解説.md  動的LCA統合報告書.md  動的LCA解説.docx  動的LCA計算手法_技術報告書.md  動的LCA計算手法_技術報告書_編集可能.html
project_directories/deliverables/files/: ~$調査④_制度導入の背景と検討プロセス.pptx  調査①_RE2020全体構造.pptx  (+3 more)
project_directories/docs/: PROJECT_OVERVIEW.md  SCHEDULE.md  SCOPE_OPTIONS.md
project_directories/pmo/: README.md  report_outline.md
project_directories/shared/: AI_USAGE_GUIDELINES.md  glossary.md
src/dynamic_lca/: __init__.py  core.py
tests/: test_core.py
(+92 files in other folders)
